# prosa-backend

./: .env  .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_post_bookmark.py
